@@ -3,7 +3,6 @@ package com.se.skill4hire.service.application;
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 
@@ -13,12 +12,15 @@ import com.se.skill4hire.entity.auth.Company;
 import com.se.skill4hire.entity.job.JobPost;
 import com.se.skill4hire.repository.ApplicationRepository;
 import com.se.skill4hire.repository.RecommendationRepository;
+import com.se.skill4hire.repository.auth.CandidateAuthRepository;
 import com.se.skill4hire.repository.auth.CompanyAuthRepository;
 import com.se.skill4hire.repository.job.JobPostRepository;
+import com.se.skill4hire.repository.profile.CandidateProfileRepository;
 import com.se.skill4hire.service.exception.ApplicationNotFoundException;
 import com.se.skill4hire.service.exception.JobNotFoundException;
 import com.se.skill4hire.service.notification.CompanyNotificationService;
 import com.se.skill4hire.service.notification.NotificationService;
+import com.se.skill4hire.service.notification.EmployeeNotificationService;
 
 @Service
 public class ApplicationService {
@@ -28,19 +30,28 @@ public class ApplicationService {
     private final RecommendationRepository recommendationRepository;
     private final CompanyNotificationService companyNotificationService;
     private final NotificationService candidateNotificationService;
+    private final CandidateAuthRepository candidateAuthRepository;
+    private final CandidateProfileRepository candidateProfileRepository;
+    private final EmployeeNotificationService employeeNotificationService;
 
     public ApplicationService(ApplicationRepository repository,
                               JobPostRepository jobPostRepository,
                               CompanyAuthRepository companyAuthRepository,
                               RecommendationRepository recommendationRepository,
                               CompanyNotificationService companyNotificationService,
-                              NotificationService candidateNotificationService) {
+                              NotificationService candidateNotificationService,
+                              CandidateAuthRepository candidateAuthRepository,
+                              CandidateProfileRepository candidateProfileRepository,
+                              EmployeeNotificationService employeeNotificationService) {
         this.repository = repository;
         this.jobPostRepository = jobPostRepository;
         this.companyAuthRepository = companyAuthRepository;
         this.recommendationRepository = recommendationRepository;
         this.companyNotificationService = companyNotificationService;
         this.candidateNotificationService = candidateNotificationService;
+        this.candidateAuthRepository = candidateAuthRepository;
+        this.candidateProfileRepository = candidateProfileRepository;
+        this.employeeNotificationService = employeeNotificationService;
     }
 
     // Existing: companies view by status
@@ -48,7 +59,7 @@ public class ApplicationService {
         return repository.findByCandidateIdAndStatus(candidateId, status)
                 .stream()
                 .map(a -> new CompanyView(a.getCompanyId(), a.getCompanyName(), a.getStatus().name(), a.getAppliedAt()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     // Create a new application (defaults to APPLIED)
@@ -64,6 +75,8 @@ public class ApplicationService {
         companyNotificationService.notifyDirectApplication(a.getCompanyId(), a.getCandidateId(), a.getCompanyName(), saved.getId());
         // Notify candidate
         candidateNotificationService.notifyApplicationSubmitted(candidateId, null, companyName);
+        // Notify employees (no jobId in this path)
+        try { employeeNotificationService.notifyNewApplication(candidateId, a.getJobPostId()); } catch (Exception ignored) {}
         return toDTO(saved);
     }
 
@@ -78,7 +91,6 @@ public class ApplicationService {
         Application a = new Application();
         a.setCandidateId(candidateId);
         a.setCompanyId(job.getCompanyId());
-        // Try to populate company name if available
         if (job.getCompanyId() != null) {
             companyAuthRepository.findById(job.getCompanyId()).map(Company::getName).ifPresent(a::setCompanyName);
         }
@@ -91,14 +103,16 @@ public class ApplicationService {
         companyNotificationService.notifyNewApplication(job, candidateId, saved.getId());
         // Notify candidate
         candidateNotificationService.notifyApplicationSubmitted(candidateId, job, a.getCompanyName());
+        // Notify employees
+        try { employeeNotificationService.notifyNewApplication(candidateId, jobPostId); } catch (Exception ignored) {}
         return toDTO(saved);
     }
 
     public List<ApplicationDTO> list(String candidateId, Application.ApplicationStatus status) {
         List<Application> apps = (status == null)
-                ? repository.findByCandidateId(candidateId)
-                : repository.findByCandidateIdAndStatus(candidateId, status);
-        return apps.stream().map(this::toDTO).collect(Collectors.toList());
+            ? repository.findByCandidateId(candidateId)
+            : repository.findByCandidateIdAndStatus(candidateId, status);
+        return apps.stream().map(this::toDTO).toList();
     }
 
     public Summary summary(String candidateId) {
@@ -127,6 +141,8 @@ public class ApplicationService {
             candidateNotificationService.notifyApplicationStatusChanged(
                     a.getCandidateId(), status, job, a.getCompanyName(), reason, a.getId()
             );
+            // Notify employees about the application status change
+            try { employeeNotificationService.notifyApplicationStatusChanged(a.getCandidateId(), a.getJobPostId(), status); } catch (Exception ignored) {}
         }
         return toDTO(repository.save(a));
     }
@@ -136,7 +152,7 @@ public class ApplicationService {
         java.util.List<Application> apps = (status == null)
                 ? repository.findByCompanyId(companyId)
                 : repository.findByCompanyIdAndStatus(companyId, status);
-        return apps.stream().map(this::toDTO).collect(java.util.stream.Collectors.toList());
+        return apps.stream().map(this::toDTO).toList();
     }
 
     // Company views: list applications by job with optional status
@@ -144,13 +160,14 @@ public class ApplicationService {
         java.util.List<Application> apps = (status == null)
                 ? repository.findByJobPostId(jobPostId)
                 : repository.findByJobPostIdAndStatus(jobPostId, status);
-        return apps.stream().map(this::toDTO).collect(java.util.stream.Collectors.toList());
+        return apps.stream().map(this::toDTO).toList();
     }
 
     private ApplicationDTO toDTO(Application a) {
         ApplicationDTO dto = new ApplicationDTO();
         dto.setId(a.getId());
         dto.setCandidateId(a.getCandidateId());
+        enrichCandidateDetails(dto, a.getCandidateId());
         dto.setCompanyId(a.getCompanyId());
         dto.setCompanyName(a.getCompanyName());
         dto.setStatus(a.getStatus() != null ? a.getStatus().name() : null);
@@ -176,6 +193,47 @@ public class ApplicationService {
         return dto;
     }
 
+    private void enrichCandidateDetails(ApplicationDTO dto, String candidateId) {
+        if (candidateId == null || candidateId.isBlank()) {
+            return;
+        }
+
+        candidateAuthRepository.findById(candidateId).ifPresent(candidate -> {
+            dto.setCandidateName(candidate.getName());
+            dto.setCandidateEmail(candidate.getEmail());
+        });
+
+        candidateProfileRepository.findByUserId(candidateId).ifPresent(profile -> {
+            if ((dto.getCandidateName() == null || dto.getCandidateName().isBlank()) && profile.getName() != null) {
+                dto.setCandidateName(profile.getName());
+            }
+            if ((dto.getCandidateEmail() == null || dto.getCandidateEmail().isBlank()) && profile.getEmail() != null) {
+                dto.setCandidateEmail(profile.getEmail());
+            }
+            dto.setCandidateTitle(profile.getTitle());
+            dto.setCandidateProfilePicturePath(profile.getProfilePicturePath());
+            dto.setCandidateProfilePictureUrl(normalizeProfilePictureUrl(profile.getProfilePicturePath()));
+        });
+    }
+
+    private String normalizeProfilePictureUrl(String raw) {
+        if (raw == null || raw.isBlank()) {
+            return null;
+        }
+        String sanitized = raw.trim().replace("\\", "/");
+        if (sanitized.startsWith("http://") || sanitized.startsWith("https://")) {
+            return sanitized;
+        }
+        if (sanitized.startsWith("/uploads/")) {
+            return sanitized;
+        }
+        if (sanitized.startsWith("uploads/")) {
+            return "/" + sanitized;
+        }
+        return "/uploads/profile-pictures/" + sanitized.replaceFirst("^/+", "");
+    }
+
     public record CompanyView(String companyId, String companyName, String status, java.time.LocalDateTime appliedAt) {}
     public record Summary(long applied, long shortlisted, long rejected) {}
 }
+
